# automergeable

./: .gitignore  Cargo.nix  Cargo.toml  Makefile  README.md  crate-hashes.json  flake.nix
automergeable/: Cargo.toml
automergeable-core/: Cargo.toml
automergeable-core/src/: diff.rs  document.rs  lib.rs  to.rs
automergeable-derive/: Cargo.toml
automergeable-derive/src/: expand.rs  from.rs  lib.rs  to.rs  utils.rs
automergeable-derive/tests/: from_automerge.rs  simple_diff.rs  simple_from_value.rs  simple_paths.rs  to_automerge.rs
automergeable-traits/: Cargo.toml
automergeable-traits/src/: from.rs  lib.rs  to.rs
automergeable-view/: Cargo.toml
automergeable-view/src/: historic.rs  historical.rs  immutable.rs  lib.rs  list.rs  map.rs  mutable.rs  mutable_doc.rs  text.rs  viewable.rs  viewable_doc.rs
automergeable-view/src/list/: historic.rs  historical.rs  immutable.rs  mutable.rs
automergeable-view/src/map/: historic.rs  historical.rs  immutable.rs  mutable.rs
automergeable-view/src/text/: historic.rs  historical.rs  immutable.rs  mutable.rs
automergeable/benches/: change.rs  convert.rs  diff.rs
automergeable/fuzz/: Cargo.toml
automergeable/fuzz/fuzz_targets/: fuzz_target_1.rs
automergeable/src/: diff.rs  document.rs  lib.rs
automergeable/tests/: quickcheck.rs  wasm.rs
core/: Cargo.toml
core/src/: lib.rs
derive/: Cargo.toml
derive/src/: expand.rs
derive/tests/: simple_diff.rs  simple_from_value.rs  simple_paths.rs
fuzz/: Cargo.toml
fuzz/src/: load.rs  roundtrip.rs
src/: expand.rs  lib.rs
tests/: simple_diff.rs  simple_from_value.rs  simple_paths.rs
