[package]
name = "automergeable-derive"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.60"
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automergeable-core = { path = "../automergeable-core" }

[dev-dependencies]
insta = "1.6.1"
