[package]
name = "automergeable-derive"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.60"
automerge = "0.1.0"
automergeable-traits = { path = "../automergeable-traits" }

[dev-dependencies]
insta = "1.6.1"
serde = "1.0.123"
automergeable = { path = "../automergeable" }
pretty_assertions = "0.7.1"
maplit = "1.0.2"
smol_str = "0.1.17"
