[package]
name = "automergeable-traits"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"

[dependencies]
automerge = { git = "https://github.com/jeffa5/automerge-rs", branch = "main" }
automerge-protocol = { git = "https://github.com/jeffa5/automerge-rs", branch = "main" }
thiserror = "1.0.24"
serde_json = "1.0.62"

[features]
default = ["std"]
std = []
