[package]
name = "automergeable-traits"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"

[dependencies]
automerge = "0.1.0"
thiserror = "1.0.24"
serde_json = "1.0.62"
unicode-segmentation = "1.7.1"
smol_str = "0.1.17"

[features]
default = ["std"]
std = []
