[package]
name = "automergeable"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"

[dependencies]
automerge = { git = "https://github.com/jeffa5/automerge-rs", branch = "fix-panic-in-change" }
automerge-protocol = { git = "https://github.com/jeffa5/automerge-rs", branch = "fix-panic-in-change" }
automerge-frontend = { git = "https://github.com/jeffa5/automerge-rs", branch = "fix-panic-in-change" }
automergeable-traits = { path = "../automergeable-traits" }
automergeable-derive = { path = "../automergeable-derive" }
thiserror = "1.0.24"

[dev-dependencies]
insta = "1.6.1"
wasm-bindgen-test = "0.3.22"
getrandom = { version = "0.2.2", features=["js"] }
uuid = { version = "0.8", features = ["wasm-bindgen"] }

[features]
default = ["std"]
std = []
