[package]
name = "automergeable"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"

[dependencies]
automerge = "0.1.0"
automergeable-traits = { path = "../automergeable-traits" }
automergeable-derive = { path = "../automergeable-derive" }
thiserror = "1.0.24"
unicode-segmentation = "1.7.1"
uuid = "0.8.2"
smol_str = "0.1.17"

[dev-dependencies]
insta = "1.6.1"
wasm-bindgen-test = "0.3.22"
getrandom = { version = "0.2.2", features=["js"] }
uuid = { version = "0.8", features = ["wasm-bindgen"] }
quickcheck = "1.0.3"
criterion = "0.3.4"
maplit = "1.0.2"
pretty_assertions = "0.7.1"

[features]
default = ["std"]
std = []
derive-arbitrary = []

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "change"
harness = false

[[bench]]
name = "convert"
harness = false
